Stop tracking backend log files

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,6 +6,7 @@
 # Logs
 logs
 *.log
+backend/error_log*
 npm-debug.log*
 pnpm-debug.log*
 yarn-debug.log*
@@ -52,5 +53,5 @@ pids
 *.seed
 *.pid.lock
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
+# Diagnostic reports
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
